--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
     </header>
     <section class="escola">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+            <h2 class="escola-titulo">Ponto de equilíbrio do meu empreendimento</h2>
+            <p class="escola-texto-um">
+                Ele é muito usado quando a empresa tem vários ativos que enfrentam depreciação, dessa forma, o estudo realizado é mais natural. O cálculo usado nesse caso, é: Ponto de equilíbrio contábil = (despesas fixas e custos) / (margem de contribuição unitária).</p>
+            <p class="escola-texto-dois">É um indicador de segurança do negócio, pois mostra o quanto é necessário vender para que as receitas se igualem aos custos.</p>
         </div>
         <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
     </section>
@@ -32,14 +33,14 @@
         <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="Letícia.jpeg" alt="foto do marcelo">
-            <h3 class="estudante-nome">Letícia</h3>
+            <h3 class="estudante-nome"Letícia</h3>
             <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="Duda.jpeg" alt="foto da gabi">
-            <h3 class="estudante-nome">Duda</h3>
+            <h3 class="estudante-nome"></h3>
             <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
